--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqwKdbgNpeggnvTtEIpq/a",
+      "authorship_tag": "ABX9TyOrYnMEMhnV84ZoTDOfCR6F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,91 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import requests\n",
+        "from datetime import datetime\n",
+        "\n",
+        "# Colunn at which strike price is listed in NSE option chain table\n",
+        "strike_price_column_index = 11\n",
+        "\n",
+        "# Encapuslate NSE option data and function\n",
+        "class OptionChain:\n",
+        "\n",
+        "    # static variable to hold current running expiry date\n",
+        "    expiry = ''\n",
+        "\n",
+        "    # Common Utility to find maxinum value in the column, its index and then return the strike price with respect to index value\n",
+        "    def find_max_strike_price(self, df, option_type, column_name):\n",
+        "\n",
+        "        # Covert \"-\" as 0 so that all data can be treated as integer\n",
+        "        temp_df = df[option_type].replace(\"-\", \"0\")\n",
+        "        # Delete the last row which will have summation of all the data\n",
+        "        temp_df = temp_df[:-1]\n",
+        "        # Set the specific column as integer (by default it is string)\n",
+        "        temp_df[column_name]=temp_df[column_name].astype(int)\n",
+        "        # Dind the index value where the max value exists\n",
+        "        max_at_index = temp_df[column_name].idxmax()\n",
+        "        # Return the strike price which is available in the index value\n",
+        "        return(int(df.iloc[max_at_index, strike_price_column_index]))\n",
+        "\n",
+        "    # Get strike prices where max OI /change in OI for CE and PE\n",
+        "    def get_max_OI_data(self, symbol, expiry):\n",
+        "\n",
+        "        url =\"https://www.nseindia.com/live_market/dynaContent/live_watch/option_chain/optionKeys.jsp?symbol=\" + symbol + \"&date\" + expiry\n",
+        "        header = {\n",
+        "          \"User-Agent\": \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.75 Safari/537.36\",\n",
+        "          \"X-Requested-With\": \"XMLHttpRequest\"\n",
+        "        }\n",
+        "\n",
+        "        # Pull NSE option chain\n",
+        "        r = requests.get(url, headers=header)\n",
+        "        # Convert html page as Table and read the first table which has option data\n",
+        "        df = pd.read_html(r.text)[1]\n",
+        "\n",
+        "        # Get all max OI data and store to local object variables\n",
+        "        self.max_high_oi_ce = self.find_max_strike_price(df, \"CALLS\", \"OI\")\n",
+        "        self.max_change_oi_ce = self.find_max_strike_price(df, \"CALLS\", \"Chng in OI\")\n",
+        "        self.max_high_oi_pe = self.find_max_strike_price(df, \"PUTS\", \"OI\")\n",
+        "        self.max_change_oi_pe = self.find_max_strike_price(df, \"PUTS\", \"Chng in OI\")\n",
+        "\n",
+        "    # Constructor for OptionChain which will run for every script like Nifty and Banknifty\n",
+        "    def __init__(self, symbol):\n",
+        "\n",
+        "        # Store the symbol\n",
+        "        self.symbol = symbol\n",
+        "        # Find out the expiry for which we need to pull the details\n",
+        "\n",
+        "        if not OptionChain.expiry: # If expiry is not yet found\n",
+        "            # List the expiry details and read the first expiry\n",
+        "            base_url = 'https://www.capitalzone.in/test.php?symbol=' + symbol\n",
+        "            page_output = str(requests.get(base_url).content)\n",
+        "            expiry_list = page_output.split(\",\")\n",
+        "            OptionChain.expiry = expiry_list[0].split(\"\\\"\")[1]\n",
+        "            expirydate = datetime.strptime(OptionChain.expiry, '%d%b%Y').date()\n",
+        "            todaydate = datetime.today().date()\n",
+        "\n",
+        "            # If today is greater than expiry, then it is expired. Choose the next expiry in the list\n",
+        "            if todaydate > expirydate:\n",
+        "                NSEOption.expiry = expiry_list[1].split(\"\\\"\")[1]\n",
+        "\n",
+        "        # Form the actual URL from which we can pull PCR and max pain\n",
+        "        base_url = 'https://www.capitalzone.in/test.php?symbol=' + symbol + \"&expiry=\" + OptionChain.expiry\n",
+        "\n",
+        "        # Load the page and sent to HTML parse\n",
+        "        page_output = str(requests.get(base_url).content)\n",
+        "        # Locate the string where max pain string is available\n",
+        "        loc = page_output.find(\"\\\"max_pain\\\"\")\n",
+        "        data = page_output[loc:].split(\"\\\"\")\n",
+        "        # Get max pain and convert from float to integer\n",
+        "        self.max_pain = int(float(data[3]))\n",
+        "        # Get max pain and convert from string to float\n",
+        "        self.pcr = float(data[11])\n",
+        "        self.get_max_OI_data(symbol, OptionChain.expiry)\n",
+        "\n",
+        "    # Tracing utility to display elements of this class if needed (For debugging purpose)\n",
+        "    def display_all(self):\n",
+        "\n",
+        "        print(self.max_pain, self.pcr);"
       ],
       "execution_count": 0,
       "outputs": []
