--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrYnMEMhnV84ZoTDOfCR6F",
+      "authorship_tag": "ABX9TyN/RGCFuoGhmusW6fDzDF6o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,6 +120,76 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vPavoPn6pzOm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import requests"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CjnzDI-vp0Vz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "url =\"https://www.nseindia.com/live_market/dynaContent/live_watch/option_chain/optionKeys.jsp?symbol=nifty\"\n",
+        "HEADERS = {\n",
+        "    'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36',\n",
+        "}\n",
+        "\n",
+        "# Pull NSE option chain\n",
+        "#r = requests.get(url, headers=header)\n",
+        "# Convert html page as Table and read the first table which has option data\n",
+        "#df = pd.read_html(r.text)[1]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DJWsblUeqc6o",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a7781d0c-ed07-4a7d-8791-5ed8cc8928b5"
+      },
+      "source": [
+        "try:\n",
+        "  response = requests.get(url, timeout=10, headers=HEADERS)\n",
+        "\n",
+        "  # If the response was successful, no Exception will be raised\n",
+        "  response.raise_for_status()\n",
+        "\n",
+        "#except HTTPError as http_err:\n",
+        "    #print(f'HTTP error occurred: {http_err}')  # Python 3.6\n",
+        "except Exception as err:\n",
+        "    print(f'Other error occurred: {err}')  # Python 3.6\n",
+        "else:\n",
+        "    print('Success!')"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Other error occurred: HTTPSConnectionPool(host='www.nseindia.com', port=443): Read timed out. (read timeout=10)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
