--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN/RGCFuoGhmusW6fDzDF6o",
+      "authorship_tag": "ABX9TyOqaet5cIn6E4seduRSmlqx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,11 +160,11 @@
       "metadata": {
         "id": "DJWsblUeqc6o",
         "colab_type": "code",
+        "outputId": "a7781d0c-ed07-4a7d-8791-5ed8cc8928b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "a7781d0c-ed07-4a7d-8791-5ed8cc8928b5"
+        }
       },
       "source": [
         "try:\n",
@@ -180,7 +180,7 @@
         "else:\n",
         "    print('Success!')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,6 +190,105 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F_bxEgUtVwbF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "import requests\n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "\n",
+        "\n",
+        "def get_option_chain(symbol):\n",
+        "\n",
+        "    if symbol == 'NIFTY':\n",
+        "        Base_url =('https://www.nseindia.com/live_market/dynaContent/live_watch/option_chain/optionKeys.jsp?'\n",
+        "                   'symbolCode=-10003&symbol=NIFTY&symbol=NIFTY&instrument=OPTIDX&date=-&segmentLink=17&segmentLink=17')\n",
+        "    elif symbol == 'BANKNIFTY':\n",
+        "        Base_url =('https://www.nseindia.com/live_market/dynaContent/live_watch/option_chain/optionKeys.jsp?'\n",
+        "                   'symbolCode=-9999&symbol=BANKNIFTY&symbol=BANKNIFTY&instrument=OPTIDX&date=-&segmentLink=17&segmentLink=17')\n",
+        "    else:\n",
+        "        Base_url = ('https://www.nseindia.com//marketinfo/sym_map/symbolMapping.jsp?symbol={}&'\n",
+        "                    'instrument=OPTSTK&date=-&segmentLink=17'.format(symbol))\n",
+        "    try:\n",
+        "        page = requests.get(Base_url)\n",
+        "    except Exception as e:\n",
+        "        print (\"Exception {} in getting data  for symbol {}\".format(e, symbol))\n",
+        "\n",
+        "    #print(page.status_code)\n",
+        "    #print(page.content)\n",
+        "\n",
+        "    soup = BeautifulSoup(page.content, 'html.parser')\n",
+        "    # print (soup.prettify())\n",
+        "\n",
+        "    table_it = soup.find_all(\"div\", {\"class\": \"opttbldata\"})\n",
+        "    table_cls_1 = soup.find_all(id='octable')\n",
+        "\n",
+        "    # print (table_it)\n",
+        "    # print (table_cls_1)\n",
+        "\n",
+        "    col_list = []\n",
+        "\n",
+        "    for mytable in table_cls_1:\n",
+        "        table_head = mytable.find('thead')\n",
+        "\n",
+        "        try:\n",
+        "            row = table_head.find_all('tr')\n",
+        "            for tr in row:\n",
+        "                cols = tr.find_all('th')\n",
+        "                for th in cols:\n",
+        "                    er = th.text\n",
+        "                    ee = er.encode('utf-8')\n",
+        "                    col_list.append(ee)\n",
+        "        except Exception as e:\n",
+        "            print (\"No thead\", e)\n",
+        "\n",
+        "    col_list_fnl = [e for e in col_list if e not in ('CALLS', 'PUTS', 'Chart', '\\xc2\\xa0')]\n",
+        "\n",
+        "    # print (col_list_fnl)\n",
+        "\n",
+        "\n",
+        "    table_cls_2 = soup.find(id='octable')\n",
+        "    all_trs = table_cls_2.find_all('tr')\n",
+        "    req_rows = table_cls_2.find_all('tr')\n",
+        "\n",
+        "    new_table = pd.DataFrame(index=range(0, len(req_rows)-3), columns=col_list_fnl)\n",
+        "\n",
+        "    row_marker = 0\n",
+        "\n",
+        "    for row_number, tr_nos in enumerate(req_rows):\n",
+        "        if row_number < 1 or row_number == len(req_rows)-1:\n",
+        "            continue\n",
+        "        td_columns = tr_nos.find_all('td')\n",
+        "\n",
+        "        select_cols = td_columns[1:22]\n",
+        "        cols_h = range(0, len(select_cols))\n",
+        "\n",
+        "        for nu, column in enumerate(select_cols):\n",
+        "            utf_string = column.get_text().strip('\\n\\r\\t\": ')\n",
+        "            tr = utf_string.encode('utf-8').replace(',', '')\n",
+        "            new_table.ix[row_number, [nu]] = tr\n",
+        "\n",
+        "        row_marker += 1\n",
+        "\n",
+        "    print (new_table)\n",
+        "    new_table.to_csv('Option_Chain_Table_{}.csv'.format(symbol))\n",
+        "\n",
+        "\n",
+        "\n",
+        "#get_option_chain('WIPRO')\n",
+        "get_option_chain('NIFTY')\n",
+        "#get_option_chain('BANKNIFTY') "
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
