--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqaet5cIn6E4seduRSmlqx",
+      "authorship_tag": "ABX9TyOIjC2jXXSNCuQDFkop86vj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,7 +196,11 @@
       "metadata": {
         "id": "F_bxEgUtVwbF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 371
+        },
+        "outputId": "23fa4626-2dad-43e1-9b71-e9c93b6d0b8b"
       },
       "source": [
         "\n",
@@ -218,7 +222,7 @@
         "        Base_url = ('https://www.nseindia.com//marketinfo/sym_map/symbolMapping.jsp?symbol={}&'\n",
         "                    'instrument=OPTSTK&date=-&segmentLink=17'.format(symbol))\n",
         "    try:\n",
-        "        page = requests.get(Base_url)\n",
+        "        page = requests.get(Base_url,timeout=10)\n",
         "    except Exception as e:\n",
         "        print (\"Exception {} in getting data  for symbol {}\".format(e, symbol))\n",
         "\n",
@@ -286,6 +290,87 @@
         "#get_option_chain('WIPRO')\n",
         "get_option_chain('NIFTY')\n",
         "#get_option_chain('BANKNIFTY') "
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Exception HTTPSConnectionPool(host='www.nseindia.com', port=443): Read timed out. (read timeout=10) in getting data  for symbol NIFTY\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "UnboundLocalError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-d6a1c2966653>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;31m#get_option_chain('WIPRO')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m \u001b[0mget_option_chain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'NIFTY'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m \u001b[0;31m#get_option_chain('BANKNIFTY')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-d6a1c2966653>\u001b[0m in \u001b[0;36mget_option_chain\u001b[0;34m(symbol)\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m#print(page.content)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'html.parser'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m     \u001b[0;31m# print (soup.prettify())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'page' referenced before assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOTYpuIM1UlT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "aeefa6bf-7e6c-4918-f664-c145965d3438"
+      },
+      "source": [
+        "!pip install BeautifulSoup\n",
+        "http://quantsnippets.blogspot.com/2014/01/get-option-dataspot-price-from-nse.html"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting BeautifulSoup\n",
+            "  Downloading https://files.pythonhosted.org/packages/40/f2/6c9f2f3e696ee6a1fb0e4d7850617e224ed2b0b1e872110abffeca2a09d4/BeautifulSoup-3.2.2.tar.gz\n",
+            "\u001b[31mERROR: Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "scIJFkLszx6y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from urllib.request import urlopen \n",
+        "#from BeautifulSoup import BeautifulSoup  \n",
+        "#import datetime  \n",
+        "#import pandas  \n",
+        "#import csv  \n",
+        "#import os  \n",
+        "#import re  \n",
+        "#import logging "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TYWWfe4K3aLK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
