--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMgVvTQnySEdBSmfd8qZmJ",
+      "authorship_tag": "ABX9TyNspaATd6qUjSOTmCll9th7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,11 +196,11 @@
       "metadata": {
         "id": "F_bxEgUtVwbF",
         "colab_type": "code",
+        "outputId": "23fa4626-2dad-43e1-9b71-e9c93b6d0b8b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 371
-        },
-        "outputId": "23fa4626-2dad-43e1-9b71-e9c93b6d0b8b"
+        }
       },
       "source": [
         "\n",
@@ -291,7 +291,7 @@
         "get_option_chain('NIFTY')\n",
         "#get_option_chain('BANKNIFTY') "
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,17 +319,17 @@
       "metadata": {
         "id": "SOTYpuIM1UlT",
         "colab_type": "code",
+        "outputId": "aeefa6bf-7e6c-4918-f664-c145965d3438",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "aeefa6bf-7e6c-4918-f664-c145965d3438"
+        }
       },
       "source": [
         "!pip install BeautifulSoup\n",
         "http://quantsnippets.blogspot.com/2014/01/get-option-dataspot-price-from-nse.html"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,11 +380,11 @@
       "metadata": {
         "id": "cjXWsjpn4Qzy",
         "colab_type": "code",
+        "outputId": "702b6c5d-0935-4a66-d983-b5f2c555a32f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 376
-        },
-        "outputId": "702b6c5d-0935-4a66-d983-b5f2c555a32f"
+        }
       },
       "source": [
         "hdr = {'User-Agent': 'Web-Scraping',  \n",
@@ -397,7 +397,7 @@
         "html = urlopen(option_site).read()\n",
         "print(html)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -427,11 +427,11 @@
       "metadata": {
         "id": "LFYPibZi70PW",
         "colab_type": "code",
+        "outputId": "c200e9c8-0cef-4cf5-9cb2-d062e4b15776",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 395
-        },
-        "outputId": "c200e9c8-0cef-4cf5-9cb2-d062e4b15776"
+        }
       },
       "source": [
         "import urllib.request\n",
@@ -441,7 +441,7 @@
         "data_content = response.read()\n",
         "print(data_content)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -485,16 +485,16 @@
       "metadata": {
         "id": "949kqTrd9bVm",
         "colab_type": "code",
+        "outputId": "65c90dbe-babc-4ffe-b770-458392655f97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "65c90dbe-babc-4ffe-b770-458392655f97"
+        }
       },
       "source": [
         "print(content)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,16 +578,16 @@
       "metadata": {
         "id": "8BoW5YfW_AZ2",
         "colab_type": "code",
+        "outputId": "81715433-8a92-4ccb-90eb-b8e866c98c78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 560
-        },
-        "outputId": "81715433-8a92-4ccb-90eb-b8e866c98c78"
+        }
       },
       "source": [
         "print(get_expiry_from_option_chain('nifty'))"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -637,6 +637,188 @@
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/requests/adapters.py\u001b[0m in \u001b[0;36msend\u001b[0;34m(self, request, stream, timeout, verify, cert, proxies)\u001b[0m\n\u001b[1;32m    496\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    497\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mProtocolError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 498\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mConnectionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    499\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    500\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mMaxRetryError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mConnectionError\u001b[0m: ('Connection aborted.', ConnectionResetError(104, 'Connection reset by peer'))"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EvqjxE8QhinG",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Mounting google drive to read the downloaded nse website option chain"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_gF3OazUhJzL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 128
+        },
+        "outputId": "73d4d6c8-4a02-4ec6-8c8d-2936476792aa"
+      },
+      "source": [
+        "# Load the Drive helper and mount\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# This will prompt for authorization.\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sxD4RxpxiTDZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "e0e22e35-083b-4bed-ffe8-914c2f984fb4"
+      },
+      "source": [
+        "!ls \"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/\""
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'NSE - National Stock Exchange of India Ltd_files'\n",
+            "'NSE - National Stock Exchange of India Ltd.html'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HSciFnmNkwWU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from bs4 import BeautifulSoup\n",
+        "import codecs\n",
+        "file=\"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/NSE - National Stock Exchange of India Ltd.html\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kmd7di7Eh8zq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "HtmlFile = codecs.open(file, 'r', encoding='latin-1')\n",
+        "text = BeautifulSoup(HtmlFile.read()).text\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AgiudKuammoJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "ce69aff1-461a-42b7-bf5c-3a465e01726b"
+      },
+      "source": [
+        "soup = BeautifulSoup(HtmlFile.read(), 'html.parser')\n",
+        "#print (soup.prettify())\n",
+        "\n",
+        "table_it = soup.find_all(\"div\", {\"class\": \"opttbldata\"})\n",
+        "table_cls_1 = soup.find_all(id='octable')\n",
+        "\n",
+        "#print (table_it)\n",
+        "#print (table_cls_1)\n",
+        "\n",
+        "'''col_list = []\n",
+        "\n",
+        "for mytable in table_cls_1:\n",
+        "  table_head = mytable.find('thead')\n",
+        "\n",
+        "  try:\n",
+        "    row = table_head.find_all('tr')\n",
+        "    for tr in row:\n",
+        "      cols = tr.find_all('th')\n",
+        "      for th in cols:\n",
+        "        er = th.text\n",
+        "        ee = er.encode('utf-8')\n",
+        "        col_list.append(ee)\n",
+        "  except Exception as e:\n",
+        "    print (\"No thead\", e)\n",
+        "\n",
+        "col_list_fnl = [e for e in col_list if e not in ('CALLS', 'PUTS', 'Chart', '\\xc2\\xa0')]\n",
+        "\n",
+        "# print (col_list_fnl)\n",
+        "\n",
+        "\n",
+        "table_cls_2 = soup.find(id='octable')\n",
+        "all_trs = table_cls_2.find_all('tr')\n",
+        "req_rows = table_cls_2.find_all('tr')\n",
+        "\n",
+        "new_table = pd.DataFrame(index=range(0, len(req_rows)-3), columns=col_list_fnl)\n",
+        "\n",
+        "row_marker = 0\n",
+        "\n",
+        "for row_number, tr_nos in enumerate(req_rows):\n",
+        "  if row_number < 1 or row_number == len(req_rows)-1:\n",
+        "    continue\n",
+        "  td_columns = tr_nos.find_all('td')\n",
+        "\n",
+        "  select_cols = td_columns[1:22]\n",
+        "  cols_h = range(0, len(select_cols))\n",
+        "\n",
+        "  for nu, column in enumerate(select_cols):\n",
+        "    utf_string = column.get_text().strip('\\n\\r\\t\": ')\n",
+        "    tr = utf_string.encode('utf-8').replace(',', '')\n",
+        "    new_table.ix[row_number, [nu]] = tr\n",
+        "\n",
+        "  row_marker += 1\n",
+        "\n",
+        "print (new_table)'''\n",
+        "    "
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'col_list = []\\n\\nfor mytable in table_cls_1:\\n  table_head = mytable.find(\\'thead\\')\\n\\n  try:\\n    row = table_head.find_all(\\'tr\\')\\n    for tr in row:\\n      cols = tr.find_all(\\'th\\')\\n      for th in cols:\\n        er = th.text\\n        ee = er.encode(\\'utf-8\\')\\n        col_list.append(ee)\\n  except Exception as e:\\n    print (\"No thead\", e)\\n\\ncol_list_fnl = [e for e in col_list if e not in (\\'CALLS\\', \\'PUTS\\', \\'Chart\\', \\'Â\\xa0\\')]\\n\\n# print (col_list_fnl)\\n\\n\\ntable_cls_2 = soup.find(id=\\'octable\\')\\nall_trs = table_cls_2.find_all(\\'tr\\')\\nreq_rows = table_cls_2.find_all(\\'tr\\')\\n\\nnew_table = pd.DataFrame(index=range(0, len(req_rows)-3), columns=col_list_fnl)\\n\\nrow_marker = 0\\n\\nfor row_number, tr_nos in enumerate(req_rows):\\n  if row_number < 1 or row_number == len(req_rows)-1:\\n    continue\\n  td_columns = tr_nos.find_all(\\'td\\')\\n\\n  select_cols = td_columns[1:22]\\n  cols_h = range(0, len(select_cols))\\n\\n  for nu, column in enumerate(select_cols):\\n    utf_string = column.get_text().strip(\\'\\n\\r\\t\": \\')\\n    tr = utf_string.encode(\\'utf-8\\').replace(\\',\\', \\'\\')\\n    new_table.ix[row_number, [nu]] = tr\\n\\n  row_marker += 1\\n\\nprint (new_table)'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
         }
       ]
     }
