--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNspaATd6qUjSOTmCll9th7",
+      "authorship_tag": "ABX9TyMRP9G9cTmnpQGSGZNm0sCD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -655,11 +655,11 @@
       "metadata": {
         "id": "_gF3OazUhJzL",
         "colab_type": "code",
+        "outputId": "ff8bd2c2-ab0d-416c-f39e-5a9c7cad74e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
-        },
-        "outputId": "73d4d6c8-4a02-4ec6-8c8d-2936476792aa"
+        }
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -668,7 +668,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,16 +688,16 @@
       "metadata": {
         "id": "sxD4RxpxiTDZ",
         "colab_type": "code",
+        "outputId": "e0e22e35-083b-4bed-ffe8-914c2f984fb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "e0e22e35-083b-4bed-ffe8-914c2f984fb4"
+        }
       },
       "source": [
         "!ls \"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/\""
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,6 +719,7 @@
       "source": [
         "from bs4 import BeautifulSoup\n",
         "import codecs\n",
+        "import pandas as pd\n",
         "file=\"/content/drive/My Drive/Colab Notebooks/NSE_Site_Option_Chain_Page/NSE - National Stock Exchange of India Ltd.html\""
       ],
       "execution_count": 0,
@@ -732,8 +733,28 @@
         "colab": {}
       },
       "source": [
-        "HtmlFile = codecs.open(file, 'r', encoding='latin-1')\n",
-        "text = BeautifulSoup(HtmlFile.read()).text\n"
+        "page = open(file,encoding='latin-1')\n",
+        "soup = BeautifulSoup(page, \"html.parser\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t6e0wRWjJMKm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#soup = BeautifulSoup(HtmlFile.read(), 'html.parser')\n",
+        "#print (soup.prettify())\n",
+        "\n",
+        "table_it = soup.find_all(\"div\", {\"class\": \"opttbldata\"})\n",
+        "table_cls_1 = soup.find_all(id='octable')\n",
+        "\n",
+        "#print (table_it)\n",
+        "#print (table_cls_1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -743,23 +764,16 @@
       "metadata": {
         "id": "AgiudKuammoJ",
         "colab_type": "code",
+        "outputId": "52c2b4d0-a0b2-40ec-b491-0246bae803b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
-        },
-        "outputId": "ce69aff1-461a-42b7-bf5c-3a465e01726b"
+          "height": 271
+        }
       },
       "source": [
-        "soup = BeautifulSoup(HtmlFile.read(), 'html.parser')\n",
-        "#print (soup.prettify())\n",
         "\n",
-        "table_it = soup.find_all(\"div\", {\"class\": \"opttbldata\"})\n",
-        "table_cls_1 = soup.find_all(id='octable')\n",
         "\n",
-        "#print (table_it)\n",
-        "#print (table_cls_1)\n",
-        "\n",
-        "'''col_list = []\n",
+        "col_list = []\n",
         "\n",
         "for mytable in table_cls_1:\n",
         "  table_head = mytable.find('thead')\n",
@@ -777,7 +791,7 @@
         "\n",
         "col_list_fnl = [e for e in col_list if e not in ('CALLS', 'PUTS', 'Chart', '\\xc2\\xa0')]\n",
         "\n",
-        "# print (col_list_fnl)\n",
+        "#print (col_list_fnl)\n",
         "\n",
         "\n",
         "table_cls_2 = soup.find(id='octable')\n",
@@ -787,7 +801,7 @@
         "new_table = pd.DataFrame(index=range(0, len(req_rows)-3), columns=col_list_fnl)\n",
         "\n",
         "row_marker = 0\n",
-        "\n",
+        "#col_marker = 0\n",
         "for row_number, tr_nos in enumerate(req_rows):\n",
         "  if row_number < 1 or row_number == len(req_rows)-1:\n",
         "    continue\n",
@@ -796,29 +810,38 @@
         "  select_cols = td_columns[1:22]\n",
         "  cols_h = range(0, len(select_cols))\n",
         "\n",
-        "  for nu, column in enumerate(select_cols):\n",
+        "  for nu, cols_h in enumerate(select_cols):\n",
         "    utf_string = column.get_text().strip('\\n\\r\\t\": ')\n",
-        "    tr = utf_string.encode('utf-8').replace(',', '')\n",
-        "    new_table.ix[row_number, [nu]] = tr\n",
+        "    b_utf_string = bytes(utf_string, encoding = 'utf-8')\n",
+        "    tr = utf_string.replace(',', '')\n",
+        "    #print(nu)\n",
+        "    new_table.iloc[row_number:nu] = tr\n",
         "\n",
         "  row_marker += 1\n",
-        "\n",
-        "print (new_table)'''\n",
+        "print (new_table)\n",
         "    "
       ],
-      "execution_count": 20,
+      "execution_count": 56,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'col_list = []\\n\\nfor mytable in table_cls_1:\\n  table_head = mytable.find(\\'thead\\')\\n\\n  try:\\n    row = table_head.find_all(\\'tr\\')\\n    for tr in row:\\n      cols = tr.find_all(\\'th\\')\\n      for th in cols:\\n        er = th.text\\n        ee = er.encode(\\'utf-8\\')\\n        col_list.append(ee)\\n  except Exception as e:\\n    print (\"No thead\", e)\\n\\ncol_list_fnl = [e for e in col_list if e not in (\\'CALLS\\', \\'PUTS\\', \\'Chart\\', \\'Â\\xa0\\')]\\n\\n# print (col_list_fnl)\\n\\n\\ntable_cls_2 = soup.find(id=\\'octable\\')\\nall_trs = table_cls_2.find_all(\\'tr\\')\\nreq_rows = table_cls_2.find_all(\\'tr\\')\\n\\nnew_table = pd.DataFrame(index=range(0, len(req_rows)-3), columns=col_list_fnl)\\n\\nrow_marker = 0\\n\\nfor row_number, tr_nos in enumerate(req_rows):\\n  if row_number < 1 or row_number == len(req_rows)-1:\\n    continue\\n  td_columns = tr_nos.find_all(\\'td\\')\\n\\n  select_cols = td_columns[1:22]\\n  cols_h = range(0, len(select_cols))\\n\\n  for nu, column in enumerate(select_cols):\\n    utf_string = column.get_text().strip(\\'\\n\\r\\t\": \\')\\n    tr = utf_string.encode(\\'utf-8\\').replace(\\',\\', \\'\\')\\n    new_table.ix[row_number, [nu]] = tr\\n\\n  row_marker += 1\\n\\nprint (new_table)'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
+          "output_type": "stream",
+          "text": [
+            "   b'CALLS' b'\\xc2\\xa0' b'PUTS' b'Chart'  ... b'Volume' b'Chng in OI' b'OI' b'Chart'\n",
+            "0       NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "1       NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "2      9450        9450    9450     9450  ...      9450          9450  9450     9450\n",
+            "3      9450        9450    9450     9450  ...      9450          9450  9450     9450\n",
+            "4      9450        9450    9450     9450  ...      9450          9450  9450     9450\n",
+            "..      ...         ...     ...      ...  ...       ...           ...   ...      ...\n",
+            "66      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "67      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "68      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "69      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "70      NaN         NaN     NaN      NaN  ...       NaN           NaN   NaN      NaN\n",
+            "\n",
+            "[71 rows x 26 columns]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
